# paper-signal

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  setup.cfg
.claude/commands/: paper-signal-setup.md  paper-signal.md
claude-code/skills/paper-signal/: SKILL.md
claude-code/skills/paper-signal-setup/: SKILL.md
codex/: README.md  automation_prompt.md
config/: interests.example.yaml
docs/: architecture.md  scheduling.md
examples/: sample-daily-note.md
examples/github-actions/: daily-read.yml
paper_signal/: __init__.py  __main__.py  cli.py  config.py  models.py  onboarding.py  pipeline.py  state.py
paper_signal/agents/: __init__.py  panel.py
paper_signal/obsidian/: __init__.py  writer.py
paper_signal/obsidian/templates/: __init__.py  daily_note.md.j2
paper_signal/scoring/: __init__.py  deterministic.py
paper_signal/sources/: __init__.py  arxiv.py
prompts/: daily_synthesis.md  deep_analysis.md  paper_debate.md  representative.md  roundtable.md
scripts/: install_cron.sh  install_launchd.sh  run-daily.sh
tests/: test_cli.py  test_journey.py  test_onboarding.py  test_pipeline.py  test_scoring.py  test_scripts.py  test_writer.py
