[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-signal"
version = "0.2.0"
description = "Local-first research paper agent for daily Obsidian notes"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Weiming Long" }
]
keywords = ["arxiv", "obsidian", "research", "papers", "cli", "claude-code"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
  "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
  "jinja2>=3.1",
  "pyyaml>=6.0"
]

[project.urls]
Homepage = "https://github.com/weiminglong/paper-signal"
Repository = "https://github.com/weiminglong/paper-signal"
Issues = "https://github.com/weiminglong/paper-signal/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6"
]

[project.scripts]
paper-signal = "paper_signal.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["paper_signal*"]

[tool.setuptools.package-data]
"paper_signal.obsidian.templates" = ["*.md.j2"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
