[metadata]
name = paper-signal
version = 0.1.0
description = Local-first research paper agent for daily Obsidian notes
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Weiming Long

[options]
packages = find:
python_requires = >=3.9
install_requires =
    jinja2>=3.1
    pyyaml>=6.0
include_package_data = True

[options.extras_require]
dev =
    pytest>=8.0
    ruff>=0.6

[options.entry_points]
console_scripts =
    paper-signal = paper_signal.cli:main

[options.package_data]
paper_signal.obsidian.templates = *.md.j2
